--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Custom Night</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h2 class="Title">Ultimate CN Fan Game</h2>
     
+    <div id="office">
+        <button id="leftDoor">Left Door</button>
+        <div id="power">Power: 100%</div>
+    </div>
+
+    <script type="module" src="./js/game.js"></script>
 </body>
 </html>
