--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     
-    <div id="office">
+    <!-- Main Menu -->
+    <div id="menu">
+        <h1>Custom Night</h1>
+
+        <button id="startBtn">Start Night</button>
+    </div>
+
+
+    <!-- Office -->
+    <div id="office" style="display: none;">
         <button id="leftDoor">Left Door</button>
         <div id="power">Power: 100%</div>
     </div>
