--- a/index.html
+++ b/index.html
@@ -7,17 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
-    <!-- Main Menu -->
-    <div id="menu">
-        <h1>Custom Night</h1>
-
-        <button id="startBtn">Start Night</button>
-    </div>
-
-
     <!-- Office -->
-    <div id="office" style="display: none;">
+    <div id="office">
         <button id="leftDoor">Left Door</button>
         <div id="power">Power: 100%</div>
     </div>
