added first animatronic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="office">
         <button id="leftDoor">Left Door</button>
         <div id="power">Power: 100%</div>
+        <div id="time">0:00 AM</div>
+        <div id="lightOverlay"></div>
     </div>
 
     <script type="module" src="./js/game.js"></script>
