--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     </div>
 
     <script type="module" src="./js/game.js"></script>
+    <script type="module" src="./js/details.js"></script>
 </body>
 </html>
