fixing the game

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- Menu -->
+    <div id="menu" style="display: block;">
+        <h1 id="gameTitle">UCN Fan Game</h1>
+        <button id="startButton">Start Night</button>
+    </div>
+
     <!-- Office -->
-    <div id="office">
+    <div id="office" style="display: none;">
         <button id="leftDoor">Left Door</button>
         <div id="power">Power: 100%</div>
         <div id="time">0:00 AM</div>
